[project]
name = "cloud-alert-triage"
version = "0.1.0"
description = "OpenEnv environment for cloud alert triage"
authors = [
  { name = "Ubaid Khan", email = "" },
  { name = "Bhavesh Kumar", email = "" },
  { name = "Ved Sharma", email = "" }
]
dependencies = [
  "openai>=1.0.0",
  "httpx>=0.24.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"